syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

enum NetworkName {
  // Rule: CHAINNAME_ENVIROMENT_NETWORK

  // BTC 0xxx
  BITCOIN_MAINNET_MAINNET = 0;
  BITCOIN_TESTNET_TESTNET = 1;

  // EVM 1xxxx
  // Etheruem
  ETHEREUM_MAINNET_MAINNET = 10000;
  ETHEREUM_TESTNET_GOERLI = 10001;
  ETHEREUM_TESTNET_SEPOLIA = 10002;
  // Polygon
  POLYGON_MAINNET_MAINNET = 10003;
  POLYGON_TESTNET_MUMBAI = 10004;
  // BNB Chain
  BNB_MAINNET_MAINNET = 10005;
  BNB_TESTNET_TESTNET = 10006;
  // Avalanche
  AVALANCHE_MAINNET_CCHAIN = 10007;
  AVAX_TESTNET_FUJI = 10008;
  // Gnosis
  GNOSIS_MAINNET_MAINNET = 10009;
  GNOSIS_TESTNET_CHIADO = 10010;
  // Optimism
  Optimism_MAINNET_MAINNET = 10011;
  Optimism_TESTNET_GOERLI = 10012;
  // Arbitrum
  ARBITRUM_MAINNET_MAINNET = 10013;
  ARBITRUM_TESTNET_GOERLI = 10014;

  // MOVE 2xxxx
  //Aptos
  APTOS_MAINNET_MAINNET = 20000;
  APTOS_TESTNET_TESTNET  = 20001;
  // Sui
  SUI_MAINNET_MAINNET = 20002;
  SUI_TESTNET_TESTNET  = 20003;

  // SOLANA 3xxxx
  SOLANA_MAINNET_MAINNET = 30000;
  SOLANA_TESTNET_TESTNET  = 30001;
}


