syntax = "proto3";
package mycel.registry;

import "mycel/registry/dns_record.proto";
import "mycel/registry/network_name.proto";
import "mycel/registry/role.proto";

option go_package = "github.com/mycel-domain/mycel/x/registry/types";


message DnsRecord {
  DnsRecordType dnsRecordType = 1;
  string value = 2;
}

message WalletRecord {
  NetworkName walletRecordType = 1;
  string value = 2;
}

message Metadata {
  string key = 1;
  string value = 2;
}

message Record {
oneof record {
  DnsRecord dnsRecord = 1;
  WalletRecord walletRecord = 2;
  Metadata metadata = 3;
  }
}

message SecondLevelDomain {
  string name = 1;
  string parent = 2;
  string owner = 3;
  int64 expirationDate = 4;
  map<string, Record> records = 5;
  map<string, DomainRole> accessControl = 6;
}
